--- a/DStyle.css
+++ b/DStyle.css
@@ -2,6 +2,7 @@ body {
 	background-image: url("Background.jpg");	
 	background-size: cover;
 	font-family: Arial, sans-serif;
+	min-height: 100vh;
 }
 
 header{
