--- a/Style.css
+++ b/Style.css
@@ -23,6 +23,7 @@ body {
   margin-top: 50px; 
   margin-bottom: 50px; 
   border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 30px;
   max-width: 500px;
   width: 100%;
